# PPE_detector

./: .gitignore  .inference.py.un~  PPE Detection Pipeline.md  README.md  auto_label.py  empty_label_gen.py  experiments.ipynb  gui.py  inference.py  inference.py~  main.py  nano_inference  nano_inference.py  numpy_dump.py  onnx_export.py  onnxinference.py  ppe_dataset.py  pull_nano.sh  pyproject.toml  requirements.txt  simple_eval.py  tensorboard2csv.py  train.py  training.ipynb  trtevaluation.py  trtinference.py  video_inference.py
.ipynb_checkpoints/: requirements-checkpoint.txt  train-checkpoint.py
data_utils/: empty_label_gen.py  metrics.py  mosaic.py  ppe_dataset.py
logs/: events.out.tfevents.1750956844.DESKTOP-TBNCE9L.6350.0
logs_rich/: metrics.json  yolox_l_nc4_ep25_bs16_lr1e-04_wd5e-04_07-03_10_metrics.csv  yolox_m_uaFalse_nc6_ep300_bs8_lr1e-04_wd5e-04_07-15_23_metrics.csv  yolox_m_uaFalse_nc6_ep300_bs8_lr1e-04_wd5e-04_07-17_13_metrics.csv  yolox_m_uaFalse_nc6_ep300_bs8_lr1e-04_wd5e-04_07-17_16_metrics.csv  yolox_m_uaTrue_nc6_ep200_bs8_lr1e-04_wd5e-04_07-15_19_metrics.csv  yolox_m_uaTrue_nc6_ep300_bs8_lr1e-04_wd5e-04_07-17_09_metrics.csv  yolox_m_uaTrue_nc6_ep300_bs8_lr1e-04_wd5e-04_07-17_11_metrics.csv  yolox_s_bs16_lr1e-03_wd5e-04_06-27_14_metrics.csv  yolox_s_ep100bs32_lr1e-03_wd5e-04_06-30_12_metrics.csv  yolox_s_ep200_bs32_lr1e-03_wd5e-04_07-02_11_metrics.csv  yolox_s_ep50bs16_lr1e-03_wd5e-04_06-30_09_metrics.csv  yolox_s_nc2_ep100_bs32_lr1e-03_wd5e-04_07-02_15_metrics.csv  yolox_s_nc4_ep300_bs16_lr1e-04_wd5e-04_07-08_00_metrics.csv  (+1 more)
yolox/: head.py  (+5 more)
(+42 files in other folders)
